--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,39 @@ header {
     vertical-align: middle;
     padding-left:5px;
 }
+
+main {
+    background-color:#f5f5f5;
+}
+
+.container {
+    width:600px;
+    margin:0 auto; 
+    padding-top:20px;   
+}
+
+.box-bottoni {
+    background-color:white;
+    padding:15px;
+    border-radius: 5px;
+}
+
+.bottone-blu {
+    background-color:#63bfff;
+    padding:5px 15px;
+    font-family:Open Sans, sans-serif;
+    font-size:13px;
+    border:none;
+    border-radius: 5px;
+    color:white;
+}
+
+.bottone-bianco {
+    background-color:white;
+    padding:5px 15px;
+    font-family:Open Sans, sans-serif;
+    font-size:13px;
+    border:1px solid lightgrey;
+    border-radius: 5px;
+    color:lightgrey;
+}
