--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ main {
 
 .box-bottoni {
     background-color:white;
-    padding:15px;
+    padding:15px 50px;
     border-radius: 5px;
 }
 
@@ -56,3 +56,19 @@ main {
     border-radius: 5px;
     color:lightgrey;
 }
+
+.box-lista {
+    background-color:white;
+    padding:50px;
+    border-radius: 5px;
+    margin-top:3px;
+}
+
+.mainlist {
+    list-style-type: none;
+    font-family:Open Sans, sans-serif;
+    font-size:20px;
+    font-weight: bold;
+    line-height:60px;
+}
+
