--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 header {
     background-color:white;
     padding:20px;
@@ -21,7 +22,7 @@ header {
     padding-left:5px;
 }
 
-main {
+main, body {
     background-color:#f5f5f5;
 }
 
